Updated a help entry to be consistent with 1.5.3

--- a/org.lamport.tla.toolbox.doc/html/model/advanced-page.html
+++ b/org.lamport.tla.toolbox.doc/html/model/advanced-page.html
@@ -254,9 +254,7 @@ Contact us for more information.
 <h3> Cardinality of largest enumerable set</h3>
 
 If TLC tries to enumerate the elements of a set, it will report an error if the set
-contains more than this number of elements.&nbsp;  TLC enumerates sets when computing
-the set of all initial states.&nbsp;  If you are trying to run a spec with lots of
-initial states, you may have to increase the value of this parameter.
+contains more than this number of elements.&nbsp;  
 
 <h3><A name="jvmargs">JVM arguments</A></h3>
 
